--- a/web/css/widget/main.css
+++ b/web/css/widget/main.css
@@ -468,7 +468,7 @@ button {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  cursor: pointer;
+  pointer-events: none;
 }
 
 .widget-wrapper .widget-button {
@@ -480,6 +480,7 @@ button {
   overflow: hidden;
   border: solid 1px #cecece;
   box-shadow: 1px 1px 10px rgba(49, 49, 49, 0.5);
+  pointer-events: initial;
 }
 
 .widget-button .button-chat{
@@ -538,14 +539,16 @@ button {
   position: absolute;
   right: 100px;
   bottom: 20px;
-  max-width: 270px;
+  max-width: 250px;
+  margin-left: 10px;
   max-height: 180px;
   background: #ffffff;
   border-radius: 10px;
-  box-shadow: 0px 0px 10px 0px rgba(82, 82, 82, 0.5);
+  box-shadow: 0px 0px 10px 0px rgba(82, 82, 82, 0.3);
   font-size: 15px;
   text-align: left;
   cursor: pointer;
+  pointer-events: initial;
 }
 
 .widget-attGrabber-wrapper:after {
@@ -592,6 +595,11 @@ button {
   border-top: solid 1px rgba(151, 151, 151, 0.26);
 }
 
+.standalone-link-wrapper {
+  display: block;
+  text-decoration: none;
+}
+
 .attention-grabber-close {
   display: none;
   position: absolute;
@@ -607,10 +615,24 @@ button {
   overflow: hidden;
   font-size: 13.5px;
   cursor: pointer;
+  pointer-events: initial;
 }
 
 .widget-attGrabber-wrapper:hover .attention-grabber-close {
   display: block;
+}
+
+@media only screen and (max-device-width : 667px) {
+
+  .widget-attGrabber-wrapper .attention-grabber-close {
+    display: block;
+    width: 25px;
+    height: 25px;
+    top: -10px;
+    left: -10px;
+    font-size: 17px;
+    line-height: 1.5;
+  }
 }
 
 .arrow-right-icon {
