--- a/src/Lily/AppBundle/Resources/views/demo/api.html.twig
+++ b/src/Lily/AppBundle/Resources/views/demo/api.html.twig
@@ -85,6 +85,8 @@
       <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
     </form>
 
+    <!-- <a href='' -->
+
   </div> <!-- /container -->
 
   <script>
