--- a/web/css/widget/main.css
+++ b/web/css/widget/main.css
@@ -475,16 +475,13 @@ button {
   position: absolute;
   right: 20px;
   bottom: 20px;
-  width: 60px;
-  height: 60px;
+  width: 55px;
+  height: 55px;
   overflow: hidden;
   border: solid 1px #cecece;
-  box-shadow: 1px 1px 10px rgba(49, 49, 49, 0.5);
+  box-shadow: 1px 3px 10px rgba(49, 49, 49, 0.5);
   pointer-events: initial;
-}
-
-.widget-button .button-chat{
-
+  outline: none;
 }
 
 .hidden-animation-state {
@@ -527,8 +524,9 @@ button {
 }
 
 .button-figure {
-  width: 60px;
-  height: 60px;
+  width: 55px;
+  height: 55px;
+  width: 100%;
 }
 
 .button-rounded {
@@ -537,14 +535,14 @@ button {
 
 .widget-attGrabber-wrapper {
   position: absolute;
-  right: 100px;
+  right: 90px;
   bottom: 20px;
   max-width: 250px;
   margin-left: 10px;
   max-height: 180px;
   background: #ffffff;
   border-radius: 10px;
-  box-shadow: 0px 0px 10px 0px rgba(82, 82, 82, 0.3);
+  box-shadow: 0px 2px 10px 0px rgba(82, 82, 82, 0.5);
   font-size: 15px;
   text-align: left;
   cursor: pointer;
@@ -566,16 +564,16 @@ button {
 .attention-grabber-title {
   font-size: 15px;
   font-weight: 400;
-  line-height: 1.3;
+  line-height: 1.2;
   color: #454545;
   margin: 0;
-  padding: 10px;
+  padding: 10px 10px 8px;
 }
 
 .attention-grabber-content {
   font-size: 13px;
   font-weight: 400;
-  line-height: 1.3;
+  line-height: 1.1;
   color: #7D7D7D;
   padding: 0 10px;
   margin: 0;
@@ -585,7 +583,7 @@ button {
 .attention-grabber-cta {
   font-size: 15px;
   font-weight: 700;
-  line-height: 1.3;
+  line-height: 1.1;
   color: #414141;
   padding: 10px;
   width: 100%;
@@ -607,10 +605,11 @@ button {
   left: -10px;
   width: 20px;
   height: 20px;
-  background: rgba(150, 150, 150, .5);
+  background: rgba(50, 50, 50, .9);
+  border: solid 1px #fff;
   border-radius: 100%;
   text-align: center;
-  color: #545454;
+  color: #F2F2F2;
   line-height: 1.4;
   overflow: hidden;
   font-size: 13.5px;
