css files optimization

--- a/src/Lily/AppBundle/Resources/views/demo/index.html.twig
+++ b/src/Lily/AppBundle/Resources/views/demo/index.html.twig
@@ -10,7 +10,7 @@
 
 {% block stylesheets %}
 
-<link rel="stylesheet" href="{{ asset('css/app/demo.css') }}" type="text/css" />
+<link rel="stylesheet" href="{{ asset('build/css/app/demo.css') }}" type="text/css" />
 
   <!--[if lt IE 9]>
     <script src="{{ asset('js/ie/respond.js') }}" cache="false"></script>
