--- a/src/Lily/BackOfficeBundle/Resources/views/Faq/index.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Faq/index.html.twig
@@ -4,8 +4,8 @@
 
 {{ parent() }}
 
-<link rel="stylesheet" href="{{ asset('css/backoffice/faq.css', version=getAppVersion()) }}" type="text/css" />
-<link rel="stylesheet" href="{{ asset('css/vendor/wysihtml5.css', version=getAppVersion()) }}" type="text/css" />
+<link rel="stylesheet" href="{{ asset('build/css/backoffice/faq.css', version=getAppVersion()) }}" type="text/css" />
+<link rel="stylesheet" href="{{ asset('build/css/vendor/wysihtml5.css', version=getAppVersion()) }}" type="text/css" />
 
 {% endblock %}
 
@@ -117,9 +117,9 @@
   data-main="{{ asset('js/backoffice/faq/main.js')}}">
 </script>
 {% else %}
-<script src="{{ asset('js-build/common.js')}}"></script>
-<script src="{{ asset('js-build/chatComp.js')}}"></script>
-<script src="{{ asset('js-build/faq/main.js')}}"></script>
+<script src="{{ asset('build/js/common.js')}}"></script>
+<script src="{{ asset('build/js/chatComp.js')}}"></script>
+<script src="{{ asset('build/js/faq/main.js')}}"></script>
 {% endif %}
 
 {% endblock %}
