--- a/src/Lily/BackOfficeBundle/Resources/views/Redirections/index.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Redirections/index.html.twig
@@ -4,8 +4,8 @@
 {% block stylesheets %}
 
   {{ parent() }}
-  
-  <link rel="stylesheet" href="{{ asset('css/backoffice/redirection.css', version=getAppVersion()) }}" type="text/css" />
+
+  <link rel="stylesheet" href="{{ asset('build/css/backoffice/redirection.css', version=getAppVersion()) }}" type="text/css" />
 
 {% endblock %}
 
@@ -26,35 +26,35 @@
               <aside class="bg-white">
                 <section class="vbox">
                   <section class="scrollable">
-  
+
                     <header class="bg-white wrapper-sm clearfix b-b">
                       <div class="col-sm-7 col-xs-9 redirection-view">
   	                   <h5>Titre</h5>
   	                  </div>
-  
+
                       <div class="col-sm-2 col-xs-3 text-center">
                         <h5>Fréquence</h5>
   	                  </div>
-  
+
                       <div class="col-xs-2 redirection-action">
                         <h5>Défaut</h5>
                       </div>
-  
+
                       <div class="col-xs-1 redirection-delete">
                         <span></span>
                         <!-- Empty colon to make space for delete button-->
                       </div>
                     </header>
-  
+
                     <ul class="js-redirections-list list-group no-borders no-radius m-b-none list-group-alt list-group-lg">
                       <!-- Affichage de la liste des redirections -->
                     </ul>
-  
+
                     <a class="js-redirection-new btn btn-sm btn-primary pull-right">
                       <span class="icon-plus pull-left"></span>
                       Ajouter une redirection
                     </a>
-  
+
                   </section>
                 </section>
               </aside>
@@ -110,9 +110,9 @@
   data-main="{{ asset('js/backoffice/redirection/main.js')}}">
 </script>
 {% else %}
-<script src="{{ asset('js-build/common.js')}}"></script>
-<script src="{{ asset('js-build/chatComp.js')}}"></script>
-<script src="{{ asset('js-build/redirection/main.js')}}"></script>
+<script src="{{ asset('build/js/common.js')}}"></script>
+<script src="{{ asset('build/js/chatComp.js')}}"></script>
+<script src="{{ asset('build/js/redirection/main.js')}}"></script>
 {% endif %}
 
 
