--- a/src/Lily/BackOfficeBundle/Resources/views/layout.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/layout.html.twig
@@ -22,9 +22,9 @@ filter='cssrewrite' %}
 
 {% endstylesheets %}
 
-  <link rel="stylesheet" href="{{ asset('css/vendor/app.css', version=getAppVersion()) }}" type="text/css"/>
-  <link rel="stylesheet" href="{{ asset('css/backoffice/main.css', version=getAppVersion()) }}" type="text/css"/>
-  <link rel="stylesheet" href="{{ asset('css/components/chat.css', version=getAppVersion()) }}" type="text/css"/>
+  <link rel="stylesheet" href="{{ asset('build/css/vendor/app.css', version=getAppVersion()) }}" type="text/css"/>
+  <link rel="stylesheet" href="{{ asset('build/css/backoffice/main.css', version=getAppVersion()) }}" type="text/css"/>
+  <link rel="stylesheet" href="{{ asset('build/css/components/chat.css', version=getAppVersion()) }}" type="text/css"/>
 
 {% endblock %}
 
