--- a/src/Lily/UserBundle/Resources/views/Admin/index.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Admin/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block stylesheets %}
 {{ parent() }}
-  <link rel="stylesheet" href="{{ asset('css/backoffice/users.css', version=getAppVersion()) }}" type="text/css"/>
+  <link rel="stylesheet" href="{{ asset('build/css/backoffice/users.css', version=getAppVersion()) }}" type="text/css"/>
 {% endblock %}
 
 
@@ -100,9 +100,9 @@
   data-main="{{ asset('js/backoffice/users/main.js')}}">
 </script>
 {% else %}
-<script src="{{ asset('js-build/common.js')}}"></script>
-<script src="{{ asset('js-build/chatComp.js')}}"></script>
-<script src="{{ asset('js-build/users/main.js')}}"></script>
+<script src="{{ asset('build/js/common.js')}}"></script>
+<script src="{{ asset('build/js/chatComp.js')}}"></script>
+<script src="{{ asset('build/js/users/main.js')}}"></script>
 {% endif %}
 
 {% endblock %}
