--- a/src/Lily/UserBundle/Resources/views/Profile/index.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Profile/index.html.twig
@@ -10,7 +10,7 @@
 
 {% endstylesheets %}
 
-  <link rel="stylesheet" href="{{ asset('css/backoffice/profile.css', version=getAppVersion()) }}" type="text/css"/>
+  <link rel="stylesheet" href="{{ asset('build/css/backoffice/profile.css', version=getAppVersion()) }}" type="text/css"/>
 
 {% endblock %}
 
@@ -98,9 +98,9 @@
   data-main="{{ asset('js/backoffice/profile/main.js')}}">
 </script>
 {% else %}
-<script src="{{ asset('js-build/common.js')}}"></script>
-<script src="{{ asset('js-build/chatComp.js')}}"></script>
-<script src="{{ asset('js-build/profile/main.js')}}"></script>
+<script src="{{ asset('build/js/common.js')}}"></script>
+<script src="{{ asset('build/js/chatComp.js')}}"></script>
+<script src="{{ asset('build/js/profile/main.js')}}"></script>
 {% endif %}
 
 {% endblock %}
