--- a/src/Lily/AppBundle/Resources/views/themes/lily/index.v1.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/index.v1.html.twig
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
 {% block stylesheets %}
-  <link rel="stylesheet" href="{{ asset('css/app/lily.css', version=getAppVersion()) }}" type="text/css" />
+  <link rel="stylesheet" href="{{ asset('build/css/app/lily.css', version=getAppVersion()) }}" type="text/css" />
   <link rel="stylesheet" href="http://cdn-saio.fr/customer/{{ licence }}/css/lily-custom.css?{{ getAppVersion() }}" type="text/css" />
 {% endblock %}
 
@@ -170,7 +170,7 @@
     </script>
 
     <script
-      src="{{ asset('js-build/front/main.v1.js')}}">
+      src="{{ asset('build/js/front/main.v1.js')}}">
     </script>
 
     <script>
