--- a/src/Lily/ChatBundle/Resources/views/index.html.twig
+++ b/src/Lily/ChatBundle/Resources/views/index.html.twig
@@ -4,7 +4,7 @@
 
 {{ parent() }}
 
-  <link rel="stylesheet" href="{{ asset('css/backoffice/chat.css', version=getAppVersion()) }}" type="text/css"/>
+  <link rel="stylesheet" href="{{ asset('build/css/backoffice/chat.css', version=getAppVersion()) }}" type="text/css"/>
 
 {% endblock %}
 
@@ -98,9 +98,9 @@
   data-main="{{ asset('js/backoffice/chat/main.js')}}">
 </script>
 {% else %}
-<script src="{{ asset('js-build/common.js')}}"></script>
-<script src="{{ asset('js-build/chatComp.js')}}"></script>
-<script src="{{ asset('js-build/chat/main.js')}}"></script>
+<script src="{{ asset('build/js/common.js')}}"></script>
+<script src="{{ asset('build/js/chatComp.js')}}"></script>
+<script src="{{ asset('build/js/chat/main.js')}}"></script>
 {% endif %}
 
 {% endblock %}
