--- a/src/Lily/KnowledgeBundle/Resources/views/index.html.twig
+++ b/src/Lily/KnowledgeBundle/Resources/views/index.html.twig
@@ -5,7 +5,7 @@
 
   {{ parent() }}
 
-  <link rel="stylesheet" href="{{ asset('css/backoffice/knowledge.css', version=getAppVersion()) }}" type="text/css"/>
+  <link rel="stylesheet" href="{{ asset('build/css/backoffice/knowledge.css', version=getAppVersion()) }}" type="text/css"/>
 
 {% endblock %}
 
@@ -138,9 +138,9 @@
   data-main="{{ asset('js/backoffice/knowledge/main.js')}}">
 </script>
 {% else %}
-<script src="{{ asset('js-build/common.js')}}"></script>
-<script src="{{ asset('js-build/chatComp.js')}}"></script>
-<script src="{{ asset('js-build/knowledge/main.js')}}"></script>
+<script src="{{ asset('build/js/common.js')}}"></script>
+<script src="{{ asset('build/js/chatComp.js')}}"></script>
+<script src="{{ asset('build/js/knowledge/main.js')}}"></script>
 {% endif %}
 
 {% endblock %}
