--- a/web/css/icon.css
+++ b/web/css/icon.css
@@ -9,11 +9,11 @@ FONTS
 @font-face {
 	font-family: 'lily';
 
-	src:url('../font/api/lily.eot');
-	src:url('../font/api/lily.eot') format('embedded-opentype'),
-		url('../font/api/lily.woff') format('woff'),
-		url('../font/api/lily.ttf') format('truetype'),
-		url('../font/api/lily.svg') format('svg');
+	src:url('font/api/lily.eot');
+	src:url('font/api/lily.eot') format('embedded-opentype'),
+		url('font/api/lily.woff') format('woff'),
+		url('font/api/lily.ttf') format('truetype'),
+		url('font/api/lily.svg') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -26,7 +26,7 @@ FONTS
 	font-variant: normal;
 	text-transform: none;
 	line-height: 1;
-	
+
 	/* Better Font Rendering =========== */
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
