--- a/src/Lily/AppBundle/Resources/views/themes/lily/templates/content.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/templates/content.html.twig
@@ -3,7 +3,7 @@
 	<section class="lily-main-content">
 
 		<div class="lily-faq-link lily-cst-faq-title-link lily-back-link">
-			<a href="#/faq/<%=parent%>" data-reverse="true"><%= title %>
+			<a href="#/faq/<%=parent%>" data-reverse="true" target="_self"><%= title %>
 				<p><i class="lily-icon lily-icon-arrow-left"></i>Retour</p>
 			</a>
 		</div>
