--- a/src/Lily/AppBundle/Resources/views/themes/widget/templates/button.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/widget/templates/button.html.twig
@@ -2,15 +2,16 @@
 <a class="standalone-link-wrapper" href="{{ url('lily_app_index', { licence: licence }) }}" target="_blank">
 <% } %>
   <% if (activeRoute === 'chat') { %>
-  <div class="button-chat">
-    <% if (hasCustomOperatorFigure === 'true') { %>
+  <% if (hasCustomOperatorFigure === 'true') { %>
+    <div class="button-chat widget-button-inner image-button">
     <img class="button-figure button-chat-figure" src="<%= operatorFigureSrc %>" width="60" height="60">
-    <% } else { %>
+  <% } else { %>
+    <div class="button-chat widget-button-inner icon-button">
     <svg class="chat-icon" xmlns="http://www.w3.org/2000/svg" width="58" height="56">
     <title>
       Chat Widget Icon
     </title>
-    <g transform="translate(-0.5, 2)" fill="#FFF" fill-rule="evenodd">
+    <g transform="translate(1.5, 4)" fill="#FFF" fill-rule="evenodd">
       <path d="M30.54 36.915c2.564-.27 5.905-.74 8.712-2.764 5.352-3.85 5.93-6.98 6.56-8.96.114.48.158 1.26.02 2.22-.123.86-.392 1.87-.884 2.94-.36.78-.84 1.6-1.468 2.41-.446.58-1.407 1.94-2.435 2.99-1.028 1.05-1.734 2.17-1.793 2.74-.18 1.65.355 1.575 1.566 3.143 1.21 1.57-3.824-.062-7.023-2.76-.43-.36-.97-.16-3.07-.382-2.097-.22-5.237-1.154-4.85-1.443.39-.29 2.1.153 4.665-.12z"/>
       <path d="M24.34 5.744c-5.765.646-10.874 3.283-14.015 7.235-2.253 2.83-3.24 6.03-2.863 9.25.464 3.96 3.058 7.55 7.12 9.86.494.28.824.78.882 1.34.18 1.65-.73 3.59-1.785 5.12-1.06 1.53 6.36-.396 9.34-3.47.38-.4.93-.595 1.48-.527.93.11 1.88.167 2.823.167.88 0 1.774-.05 2.66-.143 5.02-.56 9.074-2.62 11.72-5.95 2.32-2.926 3.356-6.668 2.9-10.54-.83-7.126-8.395-12.5-17.598-12.5-.884 0-1.787.05-2.678.15z"/>
     </g>
@@ -18,10 +19,11 @@
     <% } %>
   </div>
   <% } else { %>
-  <div class="button-self-service">
-    <% if (hasCustomBrandAvatar === 'true') { %>
+  <% if (hasCustomBrandAvatar === 'true') { %>
+  <div class="button-self-service widget-button-inner image-button">
     <img class="button-figure button-self-service-figure" src="<%= brandAvatarSrc %>">
-    <% } else { %>
+  <% } else { %>
+  <div class="button-self-service widget-button-inner icon-button">
     <svg class="question-mark-icon" width="40" height="55" viewBox="0 0 40 55" xmlns="http://www.w3.org/2000/svg">
       <title>
         Question mark widget Icon
