--- a/src/Lily/AppBundle/Resources/views/themes/lily/index.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/index.html.twig
@@ -57,7 +57,7 @@
 
             {% if config.avi.redirections.phone and redirection is not null  %}
             <li>
-              <a href="tel:{{ redirection.phone }}" target="_self">
+              <a href="tel:{{ redirection.phone }}" target="_blank">
                 <span class='lily-icon lily-icon-phone'></span>Nous téléphoner
               </a>
             </li>
