--- a/src/Lily/AppBundle/Resources/views/themes/lily/templates/message_redirection.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/templates/message_redirection.html.twig
@@ -10,7 +10,7 @@
 	</li>
 <% } %>
 
-<% if (config.hasTel) { %>
+<% if (config.hasMail) { %>
 	<li class="lily-redirection-item lily-redirection-mail">
 		<a href="#/mail" target="_self">
 			<span class="lily-icon lily-icon-mail"></span>
@@ -20,9 +20,9 @@
 	</li>
 <% } %>
 
-<% if (config.hasMail)  { %>
+<% if (config.hasTel)  { %>
 	<li class="lily-redirection-item lily-redirection-tel">
-		<a href="tel:<%= redirections.tel %>">
+		<a href="tel:<%= redirections.tel %>" target="_blank">
 			<span class="lily-icon lily-icon-phone"></span>
 			<%= copy.tel %>
 			<span class="lily-icon lily-icon-arrow-right"></span>
