remove absolute paths, fix following pr comments

--- a/src/Lily/AppBundle/Resources/views/demo/api.html.twig
+++ b/src/Lily/AppBundle/Resources/views/demo/api.html.twig
@@ -20,7 +20,7 @@
 {% endblock %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.js"></script> -->
-<script src='{{ app.request.getSchemeAndHttpHost() }}{{ app.request.getBaseURL() }}/app/snippet/{{licence}}'></script>
+<script src='{{ app.request.getSchemeAndHttpHost() ~ app.request.getBaseURL() }}/app/snippet/{{licence}}'></script>
 <script>
 // SAIO api example usage
 </script>
@@ -85,7 +85,7 @@
       <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
 
       <!-- Working link on mobile devices -->
-      <a class="saio-click-to-open" href="http://bruno.saio.fr/app_dev.php/app/{{licence}}" target="_blank">
+      <a class="saio-click-to-open" href="{{ app.request.getSchemeAndHttpHost() ~ app.request.getBaseURL() }}/app/{{licence}}" target="_blank">
         Open help center
       </a>
     </form>
