--- a/web/css/widget/main.css
+++ b/web/css/widget/main.css
@@ -604,16 +604,16 @@ button {
 .attention-grabber-close {
   display: none;
   position: absolute;
-  top: -10px;
-  left: -10px;
-  width: 20px;
-  height: 20px;
-  background: rgba(50, 50, 50, .9);
-  border: solid 1px #fff;
+  top: -12px;
+  left: -12px;
+  width: 25px;
+  height: 25px;
+  background: rgba(50,50,50,.9);
+  border: 1px solid #fff;
   border-radius: 100%;
   text-align: center;
   color: #F2F2F2;
-  line-height: 1.4;
+  line-height: 1.7;
   overflow: hidden;
   font-size: 13.5px;
   cursor: pointer;
